getURL fails with jar urls because this method was calling java.net.URI.toURL(), which has a bug with jar urls. If we have a jar url, (for example jar:file:/C:/foo.jar!/intro.htm) then the java.net.URI toURL() method will return a URL like jar:, which is missing the file: part This causes problems with Web Start.